--- a/test-output/old/Suite/groups.html
+++ b/test-output/old/Suite/groups.html
@@ -1,3 +1,3 @@
 <h2>Groups used for this test run</h2><table border="1">
-<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Login</td><td>Login.logging()[pri:0, instance:testcase.Login@6bca7e0d]<br/></td></tr>
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Login</td><td>LoginTest.logging()[pri:0, instance:testcase.LoginTest@64c63c79]<br/></td></tr>
 </table>
