--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,28 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87d1f5">  <td>26/02/06 19:09:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="PaymentPageTest.Payment()[pri:0, instance:testcase.PaymentPageTest@7502291e]">Payment</td> 
-  <td>TestNG-tests-3@2064767483</td>   <td></td> </tr>
-<tr bgcolor="916aeb">  <td>26/02/06 19:09:26</td>   <td>975</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ProductPageTest.addProduct()[pri:0, instance:testcase.ProductPageTest@a22cb6a]">addProduct</td> 
-  <td>TestNG-tests-2@1279854349</td>   <td></td> </tr>
-<tr bgcolor="697186">  <td>26/02/06 19:09:26</td>   <td>915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login.logging()[pri:0, instance:testcase.Login@6bca7e0d]">logging</td> 
-  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="967478">  <td>26/02/06 19:09:57</td>   <td>31310</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="OrderConfirmationPageTest.orderConfirmation()[pri:0, instance:testcase.OrderConfirmationPageTest@7776ab]">orderConfirmation</td> 
-  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:08:58</td>   <td>-27061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.Login@6bca7e0d]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:09:42</td>   <td>16495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.OrderConfirmationPageTest@7776ab]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:08:58</td>   <td>-27061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.ProductPageTest@a22cb6a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1279854349</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:08:58</td>   <td>-27061</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.PaymentPageTest@7502291e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@2064767483</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:09:58</td>   <td>32963</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.OrderConfirmationPageTest@7776ab]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:09:34</td>   <td>9096</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.Login@6bca7e0d]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-1@1306203080</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:09:41</td>   <td>15576</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.ProductPageTest@a22cb6a]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-2@1279854349</td>   <td></td> </tr>
-<tr bgcolor="868a7f">  <td>26/02/06 19:09:46</td>   <td>21008</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.teardown()[pri:0, instance:testcase.PaymentPageTest@7502291e]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td>  <td>TestNG-tests-3@2064767483</td>   <td></td> </tr>
+<tr bgcolor="74e963">  <td>26/02/18 16:52:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.LoginTest@64c63c79]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Depends on Groups-1@1206740159</td>   <td></td> </tr>
+<tr bgcolor="74e963">  <td>26/02/18 16:52:33</td>   <td>96</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.OrderConfirmationPageTest@1f010bf0]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Depends on Groups-2@491186825</td>   <td></td> </tr>
+<tr bgcolor="74e963">  <td>26/02/18 16:52:33</td>   <td>1019</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.ProductPageTest@77825085]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Product-1@1636055540</td>   <td></td> </tr>
+<tr bgcolor="74e963">  <td>26/02/18 16:52:34</td>   <td>1150</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.setup()[pri:0, instance:testcase.PaymentPageTest@1b835480]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>TestNG-test=Payment-1@218794444</td>   <td></td> </tr>
 </table>
