--- a/test-output/old/Suite/toc.html
+++ b/test-output/old/Suite/toc.html
@@ -20,25 +20,25 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Depends on Groups (2/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Depends on Groups (0/0/0)</td><td valign='top' align='right'>
   <a href='Depends on Groups.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Payment (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Payment (0/0/0)</td><td valign='top' align='right'>
   <a href='Payment.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
 
-<table width='100%' class='test-passed'>
+<table width='100%' class='test-failed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Product (1/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Product (0/0/0)</td><td valign='top' align='right'>
   <a href='Product.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
